# ai-storj-node-web-monitor

./: .coverage  .coveragerc  .gitignore  ARCHITECTURE_DIAGRAM.md  MANIFEST.in  README - storagenode Dashboard.md  README.md  index.html  log-samples.py  log_forwarder.md  log_forwarder.py  m.sh  pyproject.toml  pytest.ini  ruff.toml  runit.sh  service.md  websies.md  websies.py
docs/: API_INTEGRATION_DESIGN.md  COMPARISON_PERFORMANCE_OPTIMIZATIONS.md  DATABASE_CONCURRENCY_FIX.md  ENHANCEMENT_PROPOSALS.md  MASTER_ROADMAP.md  PERFORMANCE_OPTIMIZATIONS.md  PHASE_10_PROMPTS.md  PHASE_11_PROMPTS.md  PHASE_12_PROMPTS.md  PHASE_13_PROMPTS.md  PHASE_2_COMPLETE.md  PHASE_8_PROMPTS.md  PROJECT_STATUS.md  ROOCODE_PROMPTS.md  STARTUP_EARNINGS_OPTIMIZATION.md  STARTUP_PERFORMANCE_OPTIMIZATIONS.md  STORAGE_FROM_LOGS_SOLUTION.md  TESTING.md  UPDATED_ROADMAP_2025.md
storj_monitor/: __init__.py  __main__.py  alert_manager.py  analytics_engine.py  anomaly_detector.py  config.py  database.py  db_utils.py  email_sender.py  financial_tracker.py  log_processor.py  notification_handler.py  performance_analyzer.py  reputation_tracker.py  server.py  state.py  storage_tracker.py  storj_api_client.py  tasks.py  webhook_sender.py  websocket_utils.py
tests/: __init__.py  conftest.py  test_alert_manager.py  test_alert_manager_unit_extra.py  test_analytics_engine.py  test_anomaly_detector.py  test_comparison.py  test_config.py  test_database.py  test_db_utils.py  test_email_sender.py  test_extra_coverage_2.py  test_financial_broadcasting.py  test_financial_tracker.py  test_log_processor.py  (+18 more)
(+32 files in other folders)
